--- a/final_poison_prune_selection_notebook.ipynb
+++ b/final_poison_prune_selection_notebook.ipynb
@@ -10,7 +10,7 @@
     "# Final Notebook: Poisoning, Data Selection, and Pruning\n",
     "**Comparing:** Full data, Random subset, EL2N, Forgettability, and CRAIG-approx selection methods.\n",
     "\n",
-    "This notebook runs prototype experiments on CIFAR-10 with label-flip and backdoor poisons, computes\n",
+    "This notebook runs prototype experiments on CIFAR-10 with backdoor poisons, computes\n",
     "attack success rate (ASR), poison retention, clean accuracy, and shows comparison plots.\n",
     "\n",
     "**Usage:** Set `PROTOTYPE = True` for quick runs on Colab/GPU. For final experiments, set `PROTOTYPE=False` and\n",
@@ -2328,7 +2328,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2341,7 +2342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
